--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,7 +39,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -49,5 +49,5 @@ android {
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.51'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
-    api 'com.android.support:design:27.1.1'
+    api 'com.google.android.material:material:1.0.0-rc01'
 }
